[package]
authors = ["Nat Budin <nbudin@actbluetech.com>"]
edition = "2021"
license = "MIT"
name = "intercode_warp_core"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.28"
indexmap = "1.9.3"
log = "0.4.19"
magnus = {version = "0.4"}
once_cell = "1.18.0"
paste = "1.0.12"
regex = "1.8.4"
serde = "1.0.164"
serde_json = "1.0.96"
sqlx = {version = "0.6.3", features = ["postgres", "tls", "runtime-tokio-rustls"]}
tokio = "1.28.2"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter", "tracing-log"]}
